--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.2.2
-Flask_MySQLdb==1.0.1
-MySQL-python==1.2.5
-numpy==1.24.4
-pandas==1.5.2
-scikit_learn==1.1.3
+Flask==2.1.1
+Flask-MySQL==1.5.2
+mysqlclient==2.1.0
+numpy==1.21.2
+pandas==1.3.3
+scikit-learn==0.24.2
