--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.1.1
-Flask-MySQL==1.5.2
-mysqlclient==2.1.0
-numpy==1.21.2
-pandas==1.3.3
-scikit-learn==0.24.2
+Flask
+Flask-MySQL
+mysqlclient
+numpy
+pandas
+scikit-learn
